--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Rizan Bhandari
     - name: Date of Birth
-      value: 14th March 1879
+      value: 13th February 1998
     - name: Languages
-      value: English, German
+      value: English, Nepali
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MCA
+      institution: Indira Gandhi National Open University, New Delhi, India
+      year: 2026
       description:
         - Description 1.
         - Description 2.
