--- a/_config.yml
+++ b/_config.yml
@@ -259,8 +259,8 @@ jekyll-archives:
   books:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["machine-learning", "roadmap"] # these tags will be displayed on the front page of your blog
+display_categories: ["machine-learning"] # these categories will be displayed on the front page of your blog
 
 # Display different badges withs stats for your publications
 # Customize badge behavior in _layouts/bib.liquid
