--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -50,7 +50,7 @@ linkedin_username: rizandev
 # wikipedia_id: # your wikipedia id (Case sensitive)
 # work_url: # work page URL
 # x_username: # your X handle
-youtube_id: @rizandev
+youtube_id: "@rizandev"
 # zotero_username: # your zotero username
 # custom_social: # can be any name here other than the ones already defined above
 #   logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
