--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,27 +66,34 @@ permissions:
 
 jobs:
   deploy:
-    # available images: https://github.com/actions/runner-images#available-images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+      
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y imagemagick
           sudo apt-get install -y libmagic1
           sudo apt-get install -y build-essential
+
       - name: Setup Ruby 💎
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.3.5"
-          bundler-cache: true
+          bundler-cache: false  # Disable Bundler caching for this step
+
+      - name: Clear Bundler Cache (if exists)
+        run: |
+          rm -rf ~/.bundle/cache
+
       - name: Setup Python 🐍
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-          cache: "pip" # caching pip dependencies
+          cache: "pip"
+
       - name: Update _config.yml ⚙️
         uses: fjogeleit/yaml-update-action@main
         with:
@@ -94,23 +101,29 @@ jobs:
           valueFile: "_config.yml"
           propertyPath: "giscus.repo"
           value: ${{ github.repository }}
+
       - name: Install python dependencies
         run: pip3 install --upgrade nbconvert
+
       - name: Disable frozen mode for Bundler
         run: bundle config set frozen false
+
       - name: Install and Build 🔧
         run: |
           export JEKYLL_ENV=production
           bundle install --jobs 4
           bundle exec jekyll build
+
       - name: Purge unused CSS 🧹
         run: |
           npm install -g purgecss
           purgecss -c purgecss.config.js
+
       - name: Deploy 🚀
         if: github.event_name != 'pull_request'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: _site
+
       - name: Re-enable frozen mode for Bundler
         run: bundle config set frozen true
